Fix issue with workshop divider being too wide

--- a/less/custom/workshops/workshops.less
+++ b/less/custom/workshops/workshops.less
@@ -31,8 +31,8 @@
 
 .workshop-divider {
   color: #FFF;
-  margin-left: -35px;
-  margin-right: -35px;
+  margin-left: -15px;
+  margin-right: -15px;
   padding: 30px;
   text-align: center;
   margin-bottom: 20px;
